shim/ffx_shim.h

// Flat C API over the AMD FidelityFX SDK (ffx-api) for Rust FFI.
//
// Why a shim (vs XeSS-style hand-transcribed structs): the ffx-api surface is
// pNext-chained descriptors plus FfxApiResource with an embedded description
// struct that ffxApiGetResourceDX12 derives from ID3D12Resource::GetDesc().
// One C++ TU compiled against the vendored MIT headers absorbs the chaining,
// the description derivation, and any header drift; Rust only ever sees the
// flat structs below (mirrored in gpu/ffx_sys.rs).
//
// The shim dynamically loads amd_fidelityfx_loader_dx12.dll (LoadLibraryExW
// with DLL_LOAD_DIR search so the loader finds the provider DLLs next to
// itself) — nothing links against amd_fidelityfx_loader_dx12.lib, so the
// executable starts with no FFX DLLs present and headless runs (--check*)
// never touch FFX.
//
// All functions return the raw ffxReturnCode_t as int32_t (0 == OK), except
// the shim-private negatives below. Handles are opaque void*. Matrices are
// float[16] in FfxApiMatrix4x4's own layout (row-major storage, row-vector
// convention) — per the header's convention table, glam's column-major /
// column-vector matrices memcpy into this directly, NO transpose (deliberate
// contrast with the SL shim, whose boundary transposes via gpu::row_major).

#pragma once
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

// Shim-private error codes (ffxReturnCode_t is non-negative).
#define FFXSHIM_ERR_LOAD_LIBRARY   -1000  // LoadLibraryExW failed
#define FFXSHIM_ERR_GET_PROC       -1001  // an ffx* export is missing
#define FFXSHIM_ERR_NOT_LOADED     -1002  // call before ffxshim_load
#define FFXSHIM_ERR_BAD_ARG        -1003

typedef void (*FfxShimLogCb)(uint32_t type /*FfxApiMsgType*/, const wchar_t* msg);

// ---- lifecycle ----
int32_t ffxshim_load(const wchar_t* loader_dll_path);
void    ffxshim_unload(void);
// Global debug message routing for one effect id (loader-level configure,
// null context). Call after load; harmless if the provider ignores it.
int32_t ffxshim_set_debug(uint64_t effect_id, FfxShimLogCb cb, uint32_t level);

// ---- support probe / version enumeration ----
// is_upscaler selects the create-desc type (denoiser vs upscale) whose
// providers are enumerated for `device`. In/out count protocol matches
// ffxQueryDescGetVersions: pass *inout_count = capacity of ids/names (or 0 to
// just get the count back). Zero returned count == effect unsupported here.
int32_t ffxshim_query_versions(int32_t is_upscaler, void* device,
                               uint64_t* inout_count,
                               uint64_t* ids /*may be null*/,
                               const char** names /*may be null*/);

// ---- context creation ----
// signal_flags: FfxApiDenoiserSignalFlags combination (the full set is
// re-exported below; the session picks which to subscribe). version_id 0 =
// provider default, else chained ffxOverrideVersion. max_w/max_h:
// ffxCreateContextDescDenoiser.maxRenderSize (dynamic resolution: dispatches
// name any renderSize <= this).
//
// The SAME flag word must be handed back to ffxshim_denoise: the header
// requires the chained per-signal descs to match the context's signalFlags
// EXACTLY (a desc is required "if and only if" its flag is set), and the shim
// holds no per-context state to remember the creation set with.
#define FFXSHIM_SIGNAL_AMBIENT_OCCLUSION (1u << 0)
#define FFXSHIM_SIGNAL_DIRECT_DIFFUSE    (1u << 1)
#define FFXSHIM_SIGNAL_DIRECT_SPECULAR   (1u << 2)
#define FFXSHIM_SIGNAL_DOMINANT_LIGHT    (1u << 3)
#define FFXSHIM_SIGNAL_INDIRECT_DIFFUSE  (1u << 4)
#define FFXSHIM_SIGNAL_INDIRECT_SPECULAR (1u << 5)
#define FFXSHIM_SIGNAL_SPECULAR_OCCLUSION (1u << 6)
int32_t ffxshim_create_denoiser(void* device, uint32_t max_w, uint32_t max_h,
                                uint32_t signal_flags, uint32_t flags,
                                uint64_t version_id, void** ctx_out);

// flags: FfxApiCreateContextUpscaleFlags. The shim always chains the
// ffxCreateContextDescUpscaleVersion (API version pin) itself.
#define FFXSHIM_UPSCALE_HDR                 (1u << 0)
#define FFXSHIM_UPSCALE_DEPTH_INVERTED      (1u << 3)
#define FFXSHIM_UPSCALE_DYNAMIC_RESOLUTION  (1u << 6)
#define FFXSHIM_UPSCALE_DEBUG_CHECKING      (1u << 7)
int32_t ffxshim_create_upscaler(void* device, uint32_t max_render_w, uint32_t max_render_h,
                                uint32_t out_w, uint32_t out_h, uint32_t flags,
                                uint64_t version_id, void** ctx_out);

// Destroys either context kind; *ctx is nulled on success.
int32_t ffxshim_destroy(void** ctx);

// ---- queries / configure ----
// FfxApiUpscaleQualityMode -> render resolution for a display size, asked of
// a live upscaler context (Rust falls back to the documented fixed ratios if
// this fails).
int32_t ffxshim_upscaler_render_res(void* upscaler_ctx, uint32_t display_w, uint32_t display_h,
                                    uint32_t quality_mode, uint32_t* out_rw, uint32_t* out_rh);
// ffxConfigureDescDenoiserKeyValue escape hatch (count/data per the header).
int32_t ffxshim_denoiser_kv(void* denoiser_ctx, uint64_t key, uint64_t count, const void* data);

// ---- per-frame dispatches ----
// A D3D12 resource reference: the FfxApiResourceDescription is derived inside
// the shim from GetDesc() (planes are allocated at range max; the dispatch's
// render_w/render_h names the active top-left sub-rect).
typedef struct FfxShimRes {
    void*    resource; // ID3D12Resource*; null = absent (zero-init resource)
    uint32_t state;    // FfxApiResourceState the resource is in at dispatch
} FfxShimRes;

// One Ray Regeneration dispatch: common inputs + one per-signal desc for each
// bit in `signal_flags`, chained internally behind the common desc in flag
// order. Conventions (from ffx_denoiser.h):
//   linear_depth    R:  signed linear view-space Z
//   motion_vectors  RG: PreviousUV - CurrentUV, B: prevZ - curZ (mv_scale {1,1,1})
//   normals         RG: octahedral normal, B: linear roughness, A: material type
//   albedos         RGB sqrt-encoded unless non_gamma_albedo
//   jitter          screen pixels; cam_pos_delta = prev - cur (world)
//   view/projection FfxApiMatrix4x4 layout (see file header note on glam)
//   ao signal       R: open fraction in [0,1] (0 = fully occluded)
//   is signal       RGB: indirect specular radiance, A: ray hit distance
// A signal's in/out pair is read IF AND ONLY IF its flag is set; the unset
// pairs may be left null. Signals the renderer has no source for
// (dominant-light visibility, indirect diffuse, specular occlusion) are not
// plumbed yet — add the desc next to the others below when they are.
typedef struct FfxShimDenoiseDesc {
    void* cmdlist;                    // ID3D12GraphicsCommandList*
    uint32_t signal_flags;            // MUST equal the creation signalFlags
    FfxShimRes linear_depth;
    FfxShimRes motion_vectors;
    FfxShimRes normals;
    FfxShimRes specular_albedo;
    FfxShimRes diffuse_albedo;
    FfxShimRes dd_in, dd_out;         // direct diffuse signal
    FfxShimRes ds_in, ds_out;         // direct specular signal
    FfxShimRes ao_in, ao_out;         // ambient occlusion signal
    FfxShimRes is_in, is_out;         // indirect specular signal
    float mv_scale[3];
    float jitter[2];
    float cam_pos_delta[3];
    float view[16];
    float projection[16];
    float depth_bounds_min, depth_bounds_max; // absolute linear view-Z band
    uint32_t render_w, render_h;      // dynamic render size this frame
    uint32_t frame_index;
    int32_t reset;                    // FFX_DENOISER_DISPATCH_RESET
    int32_t non_gamma_albedo;         // FFX_DENOISER_DISPATCH_NON_GAMMA_ALBEDO
} FfxShimDenoiseDesc;
int32_t ffxshim_denoise(void* denoiser_ctx, const FfxShimDenoiseDesc* d);

// One FSR4 upscale dispatch (ffxDispatchDescUpscale). renderSize is the
// dynamic input sub-rect; output is always the full out_w x out_h target.
typedef struct FfxShimUpscaleDesc {
    void* cmdlist;
    FfxShimRes color;                 // render-res composite (HDR linear)
    FfxShimRes depth;                 // 32-bit clip depth at render res
    FfxShimRes motion_vectors;        // shared RGBA16F plane; RG consumed
    FfxShimRes output;                // presentation-res UAV
    float jitter[2];
    float mv_scale[2];
    uint32_t render_w, render_h;
    uint32_t out_w, out_h;
    int32_t enable_sharpening;
    float sharpness;
    float frame_time_delta_ms;
    float pre_exposure;               // must be > 0
    int32_t reset;
    float cam_near, cam_far;
    float cam_fovy;                   // vertical, radians
    float view_space_to_meters;
    uint32_t flags;                   // FfxApiDispatchFsrUpscaleFlags
} FfxShimUpscaleDesc;
int32_t ffxshim_upscale(void* upscaler_ctx, const FfxShimUpscaleDesc* d);

// ---- frame generation (FG effect + frame-interpolation swapchain) ----
//
// The framegeneration provider DLL ships in a DIFFERENT sample directory than
// the loader/denoiser/upscaler drop the default --ffx-path points at, so it
// is preloaded from its own directory. Call any time before the first FG
// query/create (before or after ffxshim_load): basenames already in the
// module list are SKIPPED (GetModuleHandleW), so the primary directory's
// loader/upscaler/denoiser stay authoritative no matter the call order — this
// only ever contributes DLLs the primary directory lacks. Missing dir = OK
// (the FG probe then reports no versions, the loud-fallback shape).
int32_t ffxshim_preload_dir(const wchar_t* dir);

// Provider-version enumeration for the FG effect (the upscaler/denoiser
// query's third sibling; same in/out count protocol).
int32_t ffxshim_query_versions_fg(void* device, uint64_t* inout_count,
                                  uint64_t* ids /*may be null*/,
                                  const char** names /*may be null*/);

// Wrap an existing flip-model swapchain with the FidelityFX frame-
// interpolation swapchain. *inout_swapchain: IDXGISwapChain4* in (the shim
// takes the reference over), FI proxy out — the caller must present through
// the proxy from then on and must Release() every ref it holds on the proxy
// BEFORE ffxshim_destroy(sc_ctx) (destroying the context tears the proxy
// down). The swapchain-API version pin desc is always chained.
int32_t ffxshim_fg_swapchain_wrap(void* game_queue,
                                  void** inout_swapchain,
                                  void** out_sc_ctx);

// Block until every pending (paced/generated) present has retired. Call
// before releasing the proxy / destroying the swapchain context, and before
// device teardown.
int32_t ffxshim_fg_swapchain_wait(void* sc_ctx);

// Register the UI texture (the HUD) composited by the FI swapchain onto BOTH
// real and generated frames. Empty resource = unregister. flags is the
// FfxApiUiCompositionFlags word verbatim (USE_PREMUL_ALPHA = 1<<0,
// ENABLE_INTERNAL_UI_DOUBLE_BUFFERING = 1<<1 — the latter has the proxy
// snapshot the resource at Present, so the pacing thread never reads a
// texture the game queue is mid-writing).
int32_t ffxshim_fg_swapchain_ui(void* sc_ctx, const FfxShimRes* ui, uint32_t flags);

// Create the FG effect context. backbuffer_format: FfxApiSurfaceFormat of the
// swapchain. flags: FfxApiCreateContextFramegenerationFlags. version_id 0 =
// provider default + the FFX_FRAMEGENERATION_VERSION API pin desc; nonzero =
// chained ffxOverrideVersion alone (the upscaler's mutual-exclusion rule — a
// 3.1 provider may reject the 4.x pin).
#define FFXSHIM_FG_ASYNC_SUPPORT      (1u << 0)
#define FFXSHIM_FG_DEPTH_INVERTED     (1u << 3)
#define FFXSHIM_FG_HDR                (1u << 5)
#define FFXSHIM_FG_DEBUG_CHECKING     (1u << 6)
int32_t ffxshim_create_fg(void* device, uint32_t display_w, uint32_t display_h,
                          uint32_t max_render_w, uint32_t max_render_h,
                          uint32_t backbuffer_format, uint32_t flags,
                          uint64_t version_id, void** out_ctx);

// Per-frame FG configuration (ffxConfigureDescFrameGeneration). The frame
// generation callback is a fixed shim trampoline routing the FI swapchain's
// dispatch desc into fg_ctx; the present callback stays null (the swapchain's
// default composition). min_max_luminance nonzero = patched over the
// swapchain-derived values in the trampoline (the display probe knows the
// real panel range; the swapchain only guesses). frame_id must advance by
// EXACTLY 1 per rendered frame across configure and prepare alike — any other
// delta resets the interpolation history by contract.
typedef struct FfxShimFgConfig {
    void*    swapchain;            // the FI proxy (IDXGISwapChain*)
    int32_t  enabled;
    int32_t  allow_async;
    FfxShimRes hudless;            // empty = interpolate the whole backbuffer
    uint32_t flags;                // FfxApiDispatchFramegenerationFlags (debug)
    int32_t  only_present_generated;
    uint32_t rect_left, rect_top, rect_w, rect_h; // generationRect
    float    min_max_luminance[2];
    uint64_t frame_id;
} FfxShimFgConfig;
int32_t ffxshim_fg_configure(void* fg_ctx, const FfxShimFgConfig* c);

// Per-frame prepare pass (ffxDispatchDescFrameGenerationPrepareV2), recorded
// into the frame's own command list AFTER the depth/motion planes are final.
// Conventions match FfxShimUpscaleDesc: pixel-space MVs ride mv_scale, jitter
// in render-res pixels, depth is the reversed-Z clip plane (create the FG
// context with FFXSHIM_FG_DEPTH_INVERTED).
typedef struct FfxShimFgPrepare {
    void*    cmdlist;
    uint64_t frame_id;
    uint32_t flags;
    uint32_t render_w, render_h;
    float    jitter[2];
    float    mv_scale[2];
    float    frame_time_delta_ms;
    int32_t  reset;
    float    cam_near, cam_far, cam_fovy;
    float    view_space_to_meters;
    FfxShimRes depth;
    FfxShimRes motion_vectors;
    float    cam_pos[3], cam_up[3], cam_right[3], cam_fwd[3];
} FfxShimFgPrepare;
int32_t ffxshim_fg_prepare(void* fg_ctx, const FfxShimFgPrepare* p);

#ifdef __cplusplus
} // extern "C"
#endif